--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,11 +2,16 @@
 name = "fcc-fastapi"
 version = "0.1.0"
 description = ""
-authors = ["Atanas Lambov <alambov@hfmarkets.com>"]
+authors = ["Lambov"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.10"
+fastapi = {extras = ["all"], version = "^0.112.2"}
+sqlalchemy = "^2.0.32"
+psycopg2-binary = "^2.9.9"
+passlib = "^1.7.4"
+jwt = "^1.3.1"
 
 
 [build-system]
