--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ fastapi = {extras = ["all"], version = "^0.112.2"}
 sqlalchemy = "^2.0.32"
 psycopg2-binary = "^2.9.9"
 passlib = "^1.7.4"
-jwt = "^1.3.1"
+pyjwt = "^2.9.0"
 
 
 [build-system]
